--- a/base-project/style.css
+++ b/base-project/style.css
@@ -10,6 +10,67 @@
 
 /* formating the body html tag */
 body {
+    background-image: url("Images/WSPLunchroom.jpg");
+    background-size: cover;
+    background-position: center center;
     font-family: "Source Sans Pro", sans-serif; /* desired font + default font */
     margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;    
 }
+
+.welcomeScreen{
+    margin: 0;
+    padding: 0;
+    background-color: white;
+    width: 400px;
+    max-width: 100%;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 10px rgba(100, 100, 100, 0.5);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    overflow: hidden;
+
+}
+
+#teamName{
+    border: dashed;
+    margin: 10px;
+    font-size: 1rem;
+    width: 90%;
+    height: 50px;
+    text-align: center;
+}
+
+#teamBtn{
+    background-color: #4370E7;
+    /* remove border so it appears rounded at the bottom */
+    border: none;
+    /* sets color of font */
+    color: white; 
+    cursor: pointer;
+    /* changes it to a finger pointing */
+    cursor: pointer;
+    display: block;
+    font-family: inherit;
+    font-size: 1rem;
+    padding: 1.1rem; 
+    width: 100%;
+    
+
+}
+#teamBtn:hover{
+    background-color: #1f54e7;
+}
+
+#teamBtn:disabled{
+    background-color: rgba(150, 150, 150, 0.5);
+    cursor: not-allowed; 
+}
+
