--- a/base-project/questions/questionsStyle.css
+++ b/base-project/questions/questionsStyle.css
@@ -50,14 +50,14 @@ label {
 
 #instructions{
     width: 70vw;
-    min-height: 10vh;
+    height: 10vh;
 }
 
 .questionPanel{
     margin: 1vw;
     padding: 10px;
-    width: 40vw;
-    min-height: 70vh;
+    width: 40%;
+    height: 70vh;
     background-color: white;
     border-radius: 10px;
     box-shadow: 0 0 5px 5px rgba(100, 100, 100, 0.5);
