--- a/base-project/gamePages/css/questionsStyle.css
+++ b/base-project/gamePages/css/questionsStyle.css
@@ -9,19 +9,22 @@
     box-sizing: border-box;
 }
 
-body {
-    /* Background image Settings */
+#myBody {
     background-image: url("images/WSPLunchroom.jpg");
     background-repeat: repeat-y;
     background-size: cover;
     background-position: center center;
+}
+
+.myDiv {
+    /* Background image Settings */
     font-family: "Source Sans Pro", sans-serif; /* desired font + default font*/
     display:flex;
     flex-direction: column;
     align-items: center;
 }
 
-h2 {
+.myH2 {
     background-color: white;
     margin: 2vh;
     width: 70vw;
@@ -44,7 +47,7 @@ label {
 
 
 /* | Table Formatting */
-table{
+.myTable{
     border: 2px solid black;
     border-collapse: collapse;
     background-color: rgba(255, 255, 255, 0.5);
