--- a/base-project/css/indexStyle.css
+++ b/base-project/css/indexStyle.css
@@ -2,7 +2,7 @@
 
 /*  Google Font - Source Sans Pro */
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;600&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 /* * (asterisk) is the unversal selector - selects all elements in the HTML doc */
 * {
     box-sizing: border-box;
@@ -82,3 +82,8 @@
     cursor: not-allowed; 
 }
 
+#mainTitle{
+    background-color: #fc4236;
+    width: 100%;
+    font-family: "Anton", sans-serif;
+}
