--- a/base-project/css/indexStyle.css
+++ b/base-project/css/indexStyle.css
@@ -1,8 +1,9 @@
-/* used to style the HTML page */
+/* used to style the HTML page my way on top bootstrap, and jquery confirm */
 
-/*  Google Font - Source Sans Pro */
+/*  Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+
 /* * (asterisk) is the unversal selector - selects all elements in the HTML doc */
 * {
     box-sizing: border-box;
@@ -10,7 +11,7 @@
 
 /* formating the body html tag */
 .myBody {
-    background-image: url("images/WSPLunchroom.jpg");
+    background-image: url("images/lunchroom.jpg");
     background-size: cover;
     background-position: center center;
     font-family: "Source Sans Pro", sans-serif; /* desired font + default font */
@@ -21,6 +22,7 @@
     min-height: 100vh;    
 }
 
+/* Styles the welcome screen div*/
 .welcomeScreen{
     margin: 0;
     padding: 0;
@@ -39,24 +41,19 @@
 
 }
 
+/* Styles input text box */
 #teamName{
     border: dashed;
-    margin: 10px;
+    margin: 5px;
+    /* used to fix spacing bug */
+    margin-bottom: 20px; 
     font-size: 1rem;
     width: 90%;
     height: 50px;
     text-align: center;
 }
 
-#roomCode{
-    border: dashed;
-    margin: 10px;
-    font-size: 1rem;
-    width: 90%;
-    height: 50px;
-    text-align: center;
-}
-
+/* Stylizes the button labelled begin game */
 #teamBtn{
     background-color: #fc4236;
     /* remove border so it appears rounded at the bottom */
@@ -73,15 +70,18 @@
     width: 100%;
 }
 
+/* Change color of button when it is hovered over when enabled */
 #teamBtn:hover{
     background-color: #c9382e;;
 }
 
+/* Gives the feeling that the button is disabled */
 #teamBtn:disabled{
     background-color: rgba(150, 150, 150, 0.5);
     cursor: not-allowed; 
 }
 
+/* Themes the welcome message paragraph */
 #mainTitle{
     background-color: #fc4236;
     width: 100%;
